[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robot-arm-openenv"
version = "1.0.0"
description = "OpenEnv robot arm pick-and-place environment"
authors = [
    { name = "Melwin Joseph" }
]
dependencies = [
    "pydantic",
    "openai",
    "python-dotenv",
    "fastapi",
    "uvicorn",
    "requests",
    "openenv-core>=0.2.0"
]

#  REQUIRED ENTRY POINT
[project.scripts]
entrypoint = "server.app:app"
inference = "inference:main"
